--- a/debian/control
+++ b/debian/control
@@ -4,25 +4,22 @@ Uploaders: Akhil Varkey <akhilvarkey@disroot.org>
 Section: javascript
 Testsuite: autopkgtest-pkg-nodejs
 Priority: optional
-Rules-Requires-Root: no
-Build-Depends:
- debhelper-compat (= 12)
- , nodejs
- , node-tap (>= 10.3.3) <!nocheck>
+Build-Depends: debhelper-compat (= 13)
+ , dh-sequence-nodejs
+ , node-minipass <!nocheck>
+ , node-tap <!nocheck>
  , node-through2 <!nocheck>
- , node-yallist (>= 4.0.0) <!nocheck>
- , pkg-js-tools (>= 0.9.20~)
-Standards-Version: 4.5.0
+Standards-Version: 4.6.1
 Vcs-Browser: https://salsa.debian.org/js-team/node-ssri
 Vcs-Git: https://salsa.debian.org/js-team/node-ssri.git
 Homepage: https://github.com/npm/ssri#readme
+Rules-Requires-Root: no
 
 Package: node-ssri
 Architecture: all
-Depends:
- ${misc:Depends}
- , node-yallist (>= 4.0.0)
- , nodejs
+Depends: ${misc:Depends}
+ , node-minipass
+Multi-Arch: foreign
 Description: Utility for parsing, serializing, generating and verifying  ssri metadata
  SSRI, short for Standard Subresource Integrity, is a Node.js utility for
  parsing, manipulating, serializing, generating and verifying Subresource
